--- a/components/box.css
+++ b/components/box.css
@@ -1,4 +1,4 @@
-#box {
+.box {
   background-color: var(--color-dark-blue-frosted);
 
   width: 630px;
@@ -6,4 +6,8 @@
 
   text-align: center;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+.box .title {
+  margin-bottom: 28px;
 }
