--- a/css/components/main-title.css
+++ b/css/components/main-title.css
@@ -1,13 +1,13 @@
-.title {
+.main-title {
   font-size: 76px;
-  font-family: 'Fugaz One',sans-serif;
+  font-family: 'Fugaz One', sans-serif;
 
   color: var(--color-blue-light);
 
   text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 
-.title.-second {
+.main-title.-second {
   color: white;
   text-shadow: none;
   text-align: center;
