--- a/css/components/skill-tec.css
+++ b/css/components/skill-tec.css
@@ -14,10 +14,15 @@
 .skill-tec .img-icon.-square {
   height: 75px;
   width: 75px;
+  border-radius: 5px;
 }
 
 .skill-tec .right {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+}
+
+.skill-tec .title {
+  margin-bottom: 10px;
 }
